    * 0052 Visual colorization of availability according to levels...
    * 0054 New labelling options for availability table...
    * 0055 Allow grouping by host, host group or service group...
    * 0056 New concept of service periods in availability reporting...
    * 0002 You can now annotate events in the availability reporting...
    * 0014 FIX: Fix styling of tables: always use complete width...
    * 0015 FIX: Fixed summary computation in availability when grouping is used...

    Event Console:
    * 0026 FIX: snmptd_mkevent.py: fixed crash on startup
    * 0036 FIX: Fixed bug where multsite commands did not work properly...

    Livestatus:
    * 0067 livedump: new option to mark the mode at the beginning of the dump and documentation fixes...
    * 0023 FIX: Fixed incorrect starttime of table statehist entries...
    * 0034 FIX: Availability no longer showes incorrect entries when only one logfile exists...
    * 0233 FIX: Fixed missing entries in log file and availability view...


1.2.3i6:
    Core & Setup:
    * 0041 FIX: setup.py now handles non existing wwwuser gracefully...

    Checks & Agents:
    * 0040 Add agent plugin to test local hostname resolving...
    * 0020 FIX: Inventory problem with inventory_processes parameter...

    Multisite:
    * 0000 Improved performance of LDAP sync by refactoring the group sync code

    WATO:
    * 0042 FIX: Removed debug outputs from service inventory...


1.2.3i5:
    Core:
    * Automatically remove duplicate checks when monitoring with Agent+SNMP
       at the same time. TCP based ones have precedence.
    * inventory check of SNMP devices now does scan per default (configurable)
    * FIX: inventory check now honors settings for exit code
    * FIX: avoid exception nodes of cluster have different agent type
    * FIX: continue inventory, if one check does not support it
    * FIX: fix configuration of explicit SNMP community, allow unicode