@@ -111,6 +111,7 @@
     * 0055 Allow grouping by host, host group or service group...
     * 0056 New concept of service periods in availability reporting...
     * 0002 You can now annotate events in the availability reporting...
+    * 0018 New option for displaying a legend for the colors used in the timeline...
     * 0014 FIX: Fix styling of tables: always use complete width...
     * 0015 FIX: Fixed summary computation in availability when grouping is used...
 
